# azure-custom-role-tool

./: .env.example  .gitignore  404.html  LICENSE  MANIFEST.in  README.md  azure_client.py  custom_role_designer.py  index.html  mkdocs.yml  permission_filter.py  pyproject.toml  requirements.txt  role_manager.py  setup.py  setup.sh  sitemap.xml  tests.py
.github/: dependabot.yml
.github/workflows/: deploy-docs.yml  publish-pypi.yml  python-ci.yml
azure_custom_role_tool/: __init__.py  __main__.py  azure_client.py  cli.py  permission_filter.py  role_manager.py
badges/: coverage.json
development/: index.html
development/code-refactoring/: index.html
development/implementation-summary/: index.html
development/multiline-implementation/: index.html
docs/: index.md
docs/development/: code-refactoring.md  implementation-summary.md  index.md  multiline-implementation.md
docs/features/: index.md  merge-azure-fallback.md  multiline-scripts.md  role-properties.md  unified-load.md
docs/guides/: delete-role.md  index.md  paste-mode.md  platform-engineer.md
docs/reference/: feature-reference.md  index.md  quick-reference.md
examples/: devops-developer.json  junior-developer.json  senior-developer.json
features/: index.html
features/merge-azure-fallback/: index.html
guides/: index.html
reference/: index.html
search/: search_index.json
tests/: test_azure_client.py  test_azure_roles.py  test_cli_branches.py  test_cli_commands.py  test_cli_commands_comprehensive.py  test_cli_edge.py  test_cli_help.py  test_cli_helpers.py  test_cli_merge_comprehensive.py  test_cli_more.py  test_delete_role.py  test_main_entry.py  test_multiline_console.py  test_permission_filter.py  test_role_manager.py  test_role_properties.py  test_roles_dir_clean.py  test_subscriptions.py  test_version.py
(+8 files in other folders)
